SUBDIRS = src

docdir = @docdir@

scorcheddocumentationdir = ${docdir}/documentation
scorcheddocumentation_DATA = documentation/README-wxwindows.txt \
	documentation/README-SDLNET.txt \
	documentation/README-SDL.txt \
	documentation/README-EXPAT.txt \
	documentation/README-ODE.txt \
	documentation/README-zlib.txt \
	documentation/readme.txt \
	documentation/README-SDLMIXER.txt
scorcheddocumentationhtmldir = ${docdir}/documentation/html
scorcheddocumentationhtml_DATA = documentation/html/ports.html \
	documentation/html/players.html \
	documentation/html/accessories.html \
	documentation/html/keys.html \
	documentation/html/aiming.html \
	documentation/html/index.html \
	documentation/html/camera.html \
	documentation/html/modelling.html \
	documentation/html/online.html \
	documentation/html/options.html \
	documentation/html/quickstart.html \
	documentation/html/screen.html
scorcheddocumentationhtmlnumbersdir = ${docdir}/documentation/html/numbers
scorcheddocumentationhtmlnumbers_DATA = documentation/html/numbers/number-9.gif \
	documentation/html/numbers/number-6.gif \
	documentation/html/numbers/number-2.gif \
	documentation/html/numbers/number-8.gif \
	documentation/html/numbers/number-7.gif \
	documentation/html/numbers/number-5.gif \
	documentation/html/numbers/number-3.gif \
	documentation/html/numbers/number-4.gif \
	documentation/html/numbers/number-1.gif
scorcheddocumentationhtmlbuttonsdir = ${docdir}/documentation/html/buttons
scorcheddocumentationhtmlbuttons_DATA = documentation/html/buttons/donate.gif \
	documentation/html/buttons/scorchedlarge2.gif
scorcheddocumentationhtmlscreenshotsdir = ${docdir}/documentation/html/screenshots
scorcheddocumentationhtmlscreenshots_DATA = documentation/html/screenshots/quickstart1.gif \
	documentation/html/screenshots/server1.gif \
	documentation/html/screenshots/indicators.gif \
	documentation/html/screenshots/online2.gif \
	documentation/html/screenshots/quickstart2.gif \
	documentation/html/screenshots/scorched37-3-small.gif \
	documentation/html/screenshots/3ds.gif \
	documentation/html/screenshots/server2.gif \
	documentation/html/screenshots/weapon.gif \
	documentation/html/screenshots/scorched37-4-small.gif \
	documentation/html/screenshots/plan.gif \
	documentation/html/screenshots/quickstart3.gif \
	documentation/html/screenshots/milkshape2.gif \
	documentation/html/screenshots/aiming.gif \
	documentation/html/screenshots/wind.gif \
	documentation/html/screenshots/milkshape1.gif \
	documentation/html/screenshots/quickstart5.gif \
	documentation/html/screenshots/quickstart6.gif \
	documentation/html/screenshots/player.gif \
	documentation/html/screenshots/quickstart7.gif \
	documentation/html/screenshots/quickstart4.gif \
	documentation/html/screenshots/online1.gif \
	documentation/html/screenshots/tooltip1.gif
scorcheddatadir = ${datadir}/data
scorcheddata_DATA = data/landscapesdefn.xml \
	data/playernames.txt \
	data/tankais.xml \
	data/tanks.xml \
	data/ssdisplay.xml \
	data/tips.txt \
	data/prunetables.sql \
	data/ssgame.xml \
	data/statstables.sql \
	data/singlecustom.xml \
	data/safedisplay.xml \
	data/random.no \
	data/windows.xml \
	data/keys.xml \
	data/singleeasy.xml \
	data/accessories.xml \
	data/landscapes.xml \
	data/textureset.xml \
	data/landscapestex.xml \
	data/mysql.xml \
	data/singletarget.xml \
	data/server.xml \
	data/ainames.txt \
	data/singlehard.xml \
	data/singlenormal.xml \
	data/autoexec.xml
scorcheddatatexturesdir = ${datadir}/data/textures
scorcheddatatextures_DATA = data/textures/glow1.bmp \
	data/textures/ring.bmp2 \
	data/textures/smoke01.bmp \
	data/textures/smoke02.bmp \
	data/textures/talk.bmp \
	data/textures/pine.bmp \
	data/textures/pinea.bmp \
	data/textures/waves.bmp \
	data/textures/clearsky.bmp \
	data/textures/lightning.bmp \
	data/textures/ring.bmp \
	data/textures/particle.bmp \
	data/textures/waves2.bmp
scorcheddatatexturesbordershielddir = ${datadir}/data/textures/bordershield
scorcheddatatexturesbordershield_DATA = data/textures/bordershield/grid2.bmp \
	data/textures/bordershield/grid22.bmp \
	data/textures/bordershield/hit.bmp \
	data/textures/bordershield/grid.bmp
scorcheddatatexturesflamedir = ${datadir}/data/textures/flame
scorcheddatatexturesflame_DATA = data/textures/flame/flame19.bmp \
	data/textures/flame/flame09.bmp \
	data/textures/flame/flame29.bmp \
	data/textures/flame/flame27.bmp \
	data/textures/flame/flame20.bmp \
	data/textures/flame/flame02.bmp \
	data/textures/flame/flame22.bmp \
	data/textures/flame/flame14.bmp \
	data/textures/flame/flame33.bmp \
	data/textures/flame/flame24.bmp \
	data/textures/flame/flame26.bmp \
	data/textures/flame/flame16.bmp \
	data/textures/flame/flame01.bmp \
	data/textures/flame/flame23.bmp \
	data/textures/flame/flame03.bmp \
	data/textures/flame/flame31.bmp \
	data/textures/flame/flame05.bmp \
	data/textures/flame/flame13.bmp \
	data/textures/flame/flame06.bmp \
	data/textures/flame/flame32.bmp \
	data/textures/flame/flame04.bmp \
	data/textures/flame/flame18.bmp \
	data/textures/flame/flame11.bmp \
	data/textures/flame/flame08.bmp \
	data/textures/flame/flame10.bmp \
	data/textures/flame/flame30.bmp \
	data/textures/flame/flame28.bmp \
	data/textures/flame/flame21.bmp \
	data/textures/flame/flame25.bmp \
	data/textures/flame/flame07.bmp \
	data/textures/flame/flame15.bmp \
	data/textures/flame/flame12.bmp \
	data/textures/flame/flame17.bmp
scorcheddatatextureslandscapedir = ${datadir}/data/textures/landscape
scorcheddatatextureslandscape_DATA = data/textures/landscape/textures.txt
scorcheddatatextureslandscapedefaultdir = ${datadir}/data/textures/landscape/default
scorcheddatatextureslandscapedefault_DATA = data/textures/landscape/default/scorch.bmp \
	data/textures/landscape/default/texture2.bmp \
	data/textures/landscape/default/texture0.bmp \
	data/textures/landscape/default/water.bmp \
	data/textures/landscape/default/rockside.bmp \
	data/textures/landscape/default/magma-small.bmp \
	data/textures/landscape/default/cubemap.bmp \
	data/textures/landscape/default/texture1.bmp \
	data/textures/landscape/default/detail.bmp \
	data/textures/landscape/default/texture3.bmp \
	data/textures/landscape/default/shore.bmp \
	data/textures/landscape/default/cloud1.bmp \
	data/textures/landscape/default/texture4.bmp
scorcheddatatextureslandscapevulcanodir = ${datadir}/data/textures/landscape/vulcano
scorcheddatatextureslandscapevulcano_DATA = data/textures/landscape/vulcano/scorch.bmp \
	data/textures/landscape/vulcano/texture2.bmp \
	data/textures/landscape/vulcano/texture0.bmp \
	data/textures/landscape/vulcano/rockside.bmp \
	data/textures/landscape/vulcano/cubemap.bmp \
	data/textures/landscape/vulcano/texture1.bmp \
	data/textures/landscape/vulcano/texture3.bmp \
	data/textures/landscape/vulcano/shore.bmp \
	data/textures/landscape/vulcano/cloud1.bmp \
	data/textures/landscape/vulcano/texture4.bmp
scorcheddatatextureslandscapetropicaldir = ${datadir}/data/textures/landscape/tropical
scorcheddatatextureslandscapetropical_DATA = data/textures/landscape/tropical/scorch.bmp \
	data/textures/landscape/tropical/texture2.bmp \
	data/textures/landscape/tropical/texture0.bmp \
	data/textures/landscape/tropical/rockside.bmp \
	data/textures/landscape/tropical/cubemap.bmp \
	data/textures/landscape/tropical/texture1.bmp \
	data/textures/landscape/tropical/texture3.bmp \
	data/textures/landscape/tropical/shore.bmp \
	data/textures/landscape/tropical/cloud1.bmp \
	data/textures/landscape/tropical/texture4.bmp
scorcheddatatextureslandscapesanddir = ${datadir}/data/textures/landscape/sand
scorcheddatatextureslandscapesand_DATA = data/textures/landscape/sand/scorch.bmp \
	data/textures/landscape/sand/texture2.bmp \
	data/textures/landscape/sand/texture0.bmp \
	data/textures/landscape/sand/rockside.bmp \
	data/textures/landscape/sand/cubemap.bmp \
	data/textures/landscape/sand/texture1.bmp \
	data/textures/landscape/sand/texture3.bmp \
	data/textures/landscape/sand/shore.bmp \
	data/textures/landscape/sand/cloud1.bmp \
	data/textures/landscape/sand/texture4.bmp
scorcheddatatextureslandscapesnowdir = ${datadir}/data/textures/landscape/snow
scorcheddatatextureslandscapesnow_DATA = data/textures/landscape/snow/scorch.bmp \
	data/textures/landscape/snow/texture2.bmp \
	data/textures/landscape/snow/texture0.bmp \
	data/textures/landscape/snow/rockside.bmp \
	data/textures/landscape/snow/cubemap.bmp \
	data/textures/landscape/snow/texture1.bmp \
	data/textures/landscape/snow/texture3.bmp \
	data/textures/landscape/snow/shore.bmp \
	data/textures/landscape/snow/cloud1.bmp \
	data/textures/landscape/snow/texture4.bmp
scorcheddatatextureslandscapehelldir = ${datadir}/data/textures/landscape/hell
scorcheddatatextureslandscapehell_DATA = data/textures/landscape/hell/scorch.bmp \
	data/textures/landscape/hell/texture2.bmp \
	data/textures/landscape/hell/texture0.bmp \
	data/textures/landscape/hell/rockside.bmp \
	data/textures/landscape/hell/cubemap.bmp \
	data/textures/landscape/hell/texture1.bmp \
	data/textures/landscape/hell/texture3.bmp \
	data/textures/landscape/hell/shore.bmp \
	data/textures/landscape/hell/cloud1.bmp \
	data/textures/landscape/hell/texture4.bmp
scorcheddatatextureslandscapestormdir = ${datadir}/data/textures/landscape/storm
scorcheddatatextureslandscapestorm_DATA = data/textures/landscape/storm/scorch.bmp \
	data/textures/landscape/storm/texture2.bmp \
	data/textures/landscape/storm/texture0.bmp \
	data/textures/landscape/storm/rockside.bmp \
	data/textures/landscape/storm/cubemap.bmp \
	data/textures/landscape/storm/texture1.bmp \
	data/textures/landscape/storm/texture3.bmp \
	data/textures/landscape/storm/shore.bmp \
	data/textures/landscape/storm/cloud1.bmp \
	data/textures/landscape/storm/texture4.bmp
scorcheddatatextureswiconsdir = ${datadir}/data/textures/wicons
scorcheddatatextureswicons_DATA = data/textures/wicons/para.bmp \
	data/textures/wicons/hrbomb.bmp \
	data/textures/wicons/fbomb.bmp \
	data/textures/wicons/autod.bmp \
	data/textures/wicons/tdirt.bmp \
	data/textures/wicons/dball.bmp \
	data/textures/wicons/bnuke.bmp \
	data/textures/wicons/roller.bmp \
	data/textures/wicons/hdigger.bmp \
	data/textures/wicons/broller.bmp \
	data/textures/wicons/hnapalm.bmp \
	data/textures/wicons/bmissile.bmp \
	data/textures/wicons/battery.bmp \
	data/textures/wicons/hshog.bmp \
	data/textures/wicons/mirv.bmp \
	data/textures/wicons/dhead.bmp \
	data/textures/wicons/bshog.bmp \
	data/textures/wicons/shog.bmp \
	data/textures/wicons/rcharge.bmp \
	data/textures/wicons/fshield.bmp \
	data/textures/wicons/nuke.bmp \
	data/textures/wicons/hshield.bmp \
	data/textures/wicons/hroller.bmp \
	data/textures/wicons/rbomb.bmp \
	data/textures/wicons/mag.bmp \
	data/textures/wicons/rblast.bmp \
	data/textures/wicons/shield.bmp \
	data/textures/wicons/dcharge.bmp \
	data/textures/wicons/lfrog.bmp \
	data/textures/wicons/digger.bmp \
	data/textures/wicons/laser.bmp \
	data/textures/wicons/stracer.bmp \
	data/textures/wicons/tracer.bmp \
	data/textures/wicons/missile.bmp \
	data/textures/wicons/napalm.bmp \
	data/textures/wicons/smag.bmp \
	data/textures/wicons/bdigger.bmp \
	data/textures/wicons/fuel.bmp \
	data/textures/wicons/dclod.bmp
scorcheddatatextureslensflaredir = ${datadir}/data/textures/lensflare
scorcheddatatextureslensflare_DATA = data/textures/lensflare/flare4.bw \
	data/textures/lensflare/shine2.bw \
	data/textures/lensflare/flare0.bw \
	data/textures/lensflare/flare3.bw \
	data/textures/lensflare/shine4.bw \
	data/textures/lensflare/shine8.bw \
	data/textures/lensflare/shine1.bw \
	data/textures/lensflare/flare1.bw \
	data/textures/lensflare/shine5.bw \
	data/textures/lensflare/flare2.bw \
	data/textures/lensflare/shine0.bw \
	data/textures/lensflare/shine7.bw \
	data/textures/lensflare/shine9.bw \
	data/textures/lensflare/flare5.bw \
	data/textures/lensflare/shine3.bw \
	data/textures/lensflare/shine6.bw
scorcheddatatexturesexplodedir = ${datadir}/data/textures/explode
scorcheddatatexturesexplode_DATA = data/textures/explode/exp05_5.bmp \
	data/textures/explode/exp00_5.bmp \
	data/textures/explode/exp00_1.bmp \
	data/textures/explode/exp04_1.bmp \
	data/textures/explode/exp02_2.bmp \
	data/textures/explode/exp00_2.bmp \
	data/textures/explode/exp00_10.bmp \
	data/textures/explode/exp05_6.bmp \
	data/textures/explode/exp01_2.bmp \
	data/textures/explode/exp05_7.bmp \
	data/textures/explode/exp02_1.bmp \
	data/textures/explode/exp04_3.bmp \
	data/textures/explode/exp02_3.bmp \
	data/textures/explode/exp00_3.bmp \
	data/textures/explode/exp05_3.bmp \
	data/textures/explode/exp00_9.bmp \
	data/textures/explode/exp05_2.bmp \
	data/textures/explode/exp05_4.bmp \
	data/textures/explode/exp00_4.bmp \
	data/textures/explode/exp00_8.bmp \
	data/textures/explode/exp00_7.bmp \
	data/textures/explode/exp03_1.bmp \
	data/textures/explode/exp01_1.bmp \
	data/textures/explode/exp03_3.bmp \
	data/textures/explode/exp01_3.bmp \
	data/textures/explode/exp05_1.bmp \
	data/textures/explode/exp03_2.bmp \
	data/textures/explode/exp00_6.bmp \
	data/textures/explode/exp04_2.bmp
scorcheddatawindowsdir = ${datadir}/data/windows
scorcheddatawindows_DATA = data/windows/question.gif \
	data/windows/island.bmp \
	data/windows/arrowi.bmp \
	data/windows/logotiled.bmp \
	data/windows/client.bmp \
	data/windows/ok.gif \
	data/windows/tank-cus.bmp \
	data/windows/pointer.bmp \
	data/windows/plana.bmp \
	data/windows/diffa.bmp \
	data/windows/player.bmp \
	data/windows/tank-hard.bmp \
	data/windows/aima.bmp \
	data/windows/winda.bmp \
	data/windows/help.bmp \
	data/windows/exclaim.gif \
	data/windows/diff.bmp \
	data/windows/weapona2.bmp \
	data/windows/save.bmp \
	data/windows/server.bmp \
	data/windows/tank-easy.bmp \
	data/windows/plan.bmp \
	data/windows/playera2.bmp \
	data/windows/tank2.ico \
	data/windows/weapon.bmp \
	data/windows/wait.bmp \
	data/windows/sounda.bmp \
	data/windows/wind.bmp \
	data/windows/scorched.bmp \
	data/windows/move.bmp \
	data/windows/mask.bmp \
	data/windows/playera.bmp \
	data/windows/sound.bmp \
	data/windows/arrow.bmp \
	data/windows/island.ico \
	data/windows/waita.bmp \
	data/windows/winda2.bmp \
	data/windows/target.bmp \
	data/windows/pointera.bmp \
	data/windows/weapona.bmp \
	data/windows/tank2.bmp \
	data/windows/tank-med.bmp \
	data/windows/planaa.bmp \
	data/windows/aim.bmp \
	data/windows/warn.gif \
	data/windows/helpa.bmp \
	data/windows/display.bmp
scorcheddatalandscapesdir = ${datadir}/data/landscapes
scorcheddatalandscapes_DATA = data/landscapes/hmap3.bmp \
	data/landscapes/picture-none.bmp \
	data/landscapes/lowlands.bmp \
	data/landscapes/islands.bmp \
	data/landscapes/ridge-mask.bmp \
	data/landscapes/hilly.bmp \
	data/landscapes/half-mask-start.bmp \
	data/landscapes/halved.bmp \
	data/landscapes/hole.bmp \
	data/landscapes/ridge.bmp \
	data/landscapes/valley.bmp \
	data/landscapes/oldstyle.bmp \
	data/landscapes/valley-mask.bmp \
	data/landscapes/hole-mask.bmp \
	data/landscapes/half-mask.bmp
scorcheddatameshesdir = ${datadir}/data/meshes
scorcheddatameshes_DATA = data/meshes/autoaim.ase \
	data/meshes/concrete.ase \
	data/meshes/bounce.ase \
	data/meshes/wind.ase \
	data/meshes/rock2.ase \
	data/meshes/survivalraft.txt \
	data/meshes/rock1.ase \
	data/meshes/wrap.ase
scorcheddatafontsdir = ${datadir}/data/fonts
scorcheddatafonts_DATA = data/fonts/test.ttf
scorcheddataacessoriesdir = ${datadir}/data/acessories
scorcheddataacessories_DATA = 
scorcheddataaccessoriesdir = ${datadir}/data/accessories
scorcheddataaccessories_DATA = data/accessories/clusterbomb2.ase \
	data/accessories/default.ase \
	data/accessories/flare.txt \
	data/accessories/white.bmp \
	data/accessories/clusterbomb.ase \
	data/accessories/default.bmp \
	data/accessories/roller.ase
scorcheddataaccessoriesicbmdir = ${datadir}/data/accessories/icbm
scorcheddataaccessoriesicbm_DATA = data/accessories/icbm/yellow.bmp \
	data/accessories/icbm/icbm.txt \
	data/accessories/icbm/white.bmp \
	data/accessories/icbm/gradient.bmp \
	data/accessories/icbm/black.bmp
scorcheddataaccessoriesnapalmdir = ${datadir}/data/accessories/napalm
scorcheddataaccessoriesnapalm_DATA = data/accessories/napalm/body.bmp \
	data/accessories/napalm/napalm.txt
scorcheddataaccessoriesbombdir = ${datadir}/data/accessories/bomb
scorcheddataaccessoriesbomb_DATA = data/accessories/bomb/white.bmp \
	data/accessories/bomb/bomb.txt \
	data/accessories/bomb/black.bmp
scorcheddataaccessoriesrollerdir = ${datadir}/data/accessories/roller
scorcheddataaccessoriesroller_DATA = data/accessories/roller/warning.bmp \
	data/accessories/roller/worn.bmp \
	data/accessories/roller/metal.bmp \
	data/accessories/roller/roller.txt
scorcheddataaccessoriessa6dir = ${datadir}/data/accessories/sa6
scorcheddataaccessoriessa6_DATA = data/accessories/sa6/yellow.bmp \
	data/accessories/sa6/white.bmp \
	data/accessories/sa6/sa6.txt \
	data/accessories/sa6/gradient.bmp
scorcheddataaccessoriesshelldir = ${datadir}/data/accessories/shell
scorcheddataaccessoriesshell_DATA = data/accessories/shell/shell.txt \
	data/accessories/shell/black.bmp
scorcheddataaccessoriesv2missiledir = ${datadir}/data/accessories/v2missile
scorcheddataaccessoriesv2missile_DATA = data/accessories/v2missile/yellow.bmp \
	data/accessories/v2missile/v2missile.txt \
	data/accessories/v2missile/checker.bmp \
	data/accessories/v2missile/gradient.bmp \
	data/accessories/v2missile/black.bmp
scorcheddataaccessoriesm48dir = ${datadir}/data/accessories/m48
scorcheddataaccessoriesm48_DATA = data/accessories/m48/yellow.bmp \
	data/accessories/m48/white.bmp \
	data/accessories/m48/m48.txt \
	data/accessories/m48/gradient.bmp
scorcheddataaccessoriesdiggerdir = ${datadir}/data/accessories/digger
scorcheddataaccessoriesdigger_DATA = data/accessories/digger/swirl.bmp \
	data/accessories/digger/digger.txt \
	data/accessories/digger/black.bmp
scorcheddataaccessoriesbarragedir = ${datadir}/data/accessories/barrage
scorcheddataaccessoriesbarrage_DATA = data/accessories/barrage/yellow.bmp \
	data/accessories/barrage/white.bmp \
	data/accessories/barrage/gradient.bmp \
	data/accessories/barrage/barrage.txt
scorcheddataaccessoriesbombletdir = ${datadir}/data/accessories/bomblet
scorcheddataaccessoriesbomblet_DATA = data/accessories/bomblet/bomblet.txt \
	data/accessories/bomblet/yellow.bmp
scorcheddataaccessorieshawkmissiledir = ${datadir}/data/accessories/hawkmissile
scorcheddataaccessorieshawkmissile_DATA = data/accessories/hawkmissile/yellow.bmp \
	data/accessories/hawkmissile/white.bmp \
	data/accessories/hawkmissile/hawk.txt \
	data/accessories/hawkmissile/gradient.bmp
scorcheddataaccessorieslittleboydir = ${datadir}/data/accessories/littleboy
scorcheddataaccessorieslittleboy_DATA = data/accessories/littleboy/littleboy.txt \
	data/accessories/littleboy/black.bmp
scorcheddataaccessoriespalmtreedir = ${datadir}/data/accessories/palmtree
scorcheddataaccessoriespalmtree_DATA = data/accessories/palmtree/burntpalm.txt \
	data/accessories/palmtree/burntpalm2.txt \
	data/accessories/palmtree/palm.txt \
	data/accessories/palmtree/palm2.txt \
	data/accessories/palmtree/tan.bmp \
	data/accessories/palmtree/green.bmp \
	data/accessories/palmtree/black.bmp
scorcheddataaccessoriesdirtdir = ${datadir}/data/accessories/dirt
scorcheddataaccessoriesdirt_DATA = data/accessories/dirt/dirt.txt \
	data/accessories/dirt/camo.bmp
scorcheddataaccessoriesriotdir = ${datadir}/data/accessories/riot
scorcheddataaccessoriesriot_DATA = data/accessories/riot/body.bmp \
	data/accessories/riot/riot.txt \
	data/accessories/riot/base.bmp
scorcheddataaccessoriesfatmandir = ${datadir}/data/accessories/fatman
scorcheddataaccessoriesfatman_DATA = data/accessories/fatman/fatman.txt \
	data/accessories/fatman/black.bmp
scorcheddataaccessoriesbananadir = ${datadir}/data/accessories/banana
scorcheddataaccessoriesbanana_DATA = data/accessories/banana/banana.txt \
	data/accessories/banana/bantex.bmp
scorcheddataaccessoriesbouncingbettydir = ${datadir}/data/accessories/bouncingbetty
scorcheddataaccessoriesbouncingbetty_DATA = data/accessories/bouncingbetty/bouncingbetty.txt \
	data/accessories/bouncingbetty/black.bmp
scorcheddataaccessoriessmallpinedir = ${datadir}/data/accessories/smallpine
scorcheddataaccessoriessmallpine_DATA = data/accessories/smallpine/wintersmallpine.txt \
	data/accessories/smallpine/wintersmallpine3.txt \
	data/accessories/smallpine/smallpine3.txt \
	data/accessories/smallpine/wintergreen.bmp \
	data/accessories/smallpine/burntsmallpine.txt \
	data/accessories/smallpine/tan.bmp \
	data/accessories/smallpine/wintersmallpine2.txt \
	data/accessories/smallpine/smallpine.txt \
	data/accessories/smallpine/green.bmp \
	data/accessories/smallpine/smallpine2.txt \
	data/accessories/smallpine/black.bmp
scorcheddataaccessoriespatriotdir = ${datadir}/data/accessories/patriot
scorcheddataaccessoriespatriot_DATA = data/accessories/patriot/yellow.bmp \
	data/accessories/patriot/white.bmp \
	data/accessories/patriot/patriot.txt \
	data/accessories/patriot/gradient.bmp
scorcheddataaccessoriesmirvwarheaddir = ${datadir}/data/accessories/mirvwarhead
scorcheddataaccessoriesmirvwarhead_DATA = data/accessories/mirvwarhead/mirvwarhead.txt \
	data/accessories/mirvwarhead/black.bmp
scorcheddatatanksdir = ${datadir}/data/tanks
scorcheddatatanks_DATA = data/tanks/aat.ase \
	data/tanks/tank6b.bmp \
	data/tanks/sa-19.ase \
	data/tanks/t55.bmp \
	data/tanks/bradley.bmp \
	data/tanks/tos1.ase \
	data/tanks/tank3.ase \
	data/tanks/mark1.bmp \
	data/tanks/seasparrow.ase \
	data/tanks/hothgun.ase \
	data/tanks/harpoon.ase \
	data/tanks/t55.ase \
	data/tanks/tank6a.bmp \
	data/tanks/v2.ase \
	data/tanks/tank2.ase \
	data/tanks/howitzer.ase \
	data/tanks/siegetank.ase \
	data/tanks/hummersam.bmp \
	data/tanks/tank6.bmp \
	data/tanks/flakpanzerwirbelwind.ase \
	data/tanks/sa-19.bmp \
	data/tanks/harpoon.bmp \
	data/tanks/kenny02.bmp \
	data/tanks/aat.bmp \
	data/tanks/a7v.ase \
	data/tanks/hawk.ase \
	data/tanks/towedartilleryb.bmp \
	data/tanks/m110.ase \
	data/tanks/flakpanzerwirbelwind.bmp \
	data/tanks/rapier.bmp \
	data/tanks/tank5.bmp \
	data/tanks/t74b.bmp \
	data/tanks/atst.ase \
	data/tanks/apache.bmp \
	data/tanks/zsu-24-1.ase \
	data/tanks/hothgun2.ase \
	data/tanks/tank4.bmp \
	data/tanks/apache-long.bmp \
	data/tanks/question.ase \
	data/tanks/hothgun.bmp \
	data/tanks/hind.ase \
	data/tanks/mark1.ase \
	data/tanks/towedartillery.ase \
	data/tanks/question.bmp \
	data/tanks/scud.bmp \
	data/tanks/siegetank2.ase \
	data/tanks/a7v.bmp \
	data/tanks/sa6.ase \
	data/tanks/apache-long.ase \
	data/tanks/hummersam.ase \
	data/tanks/hind.bmp \
	data/tanks/tank3.bmp \
	data/tanks/tank5a.bmp \
	data/tanks/hummertow.bmp \
	data/tanks/rapier.ase \
	data/tanks/paladin.ase \
	data/tanks/tank5.ase \
	data/tanks/scud.ase \
	data/tanks/patriot.bmp \
	data/tanks/wespe.bmp \
	data/tanks/tank4.ase \
	data/tanks/hummermlrs.bmp \
	data/tanks/railgun.bmp \
	data/tanks/m110.bmp \
	data/tanks/phalanx.bmp \
	data/tanks/zsu-24-1.bmp \
	data/tanks/phalanx.ase \
	data/tanks/t74.ase \
	data/tanks/hummermlrs.ase \
	data/tanks/v2.bmp \
	data/tanks/m7priest.bmp \
	data/tanks/panzer3.bmp \
	data/tanks/hummertow.ase \
	data/tanks/tank6.ase \
	data/tanks/bm13.ase \
	data/tanks/tos1.bmp \
	data/tanks/tank2.bmp \
	data/tanks/wespe.ase \
	data/tanks/m198.ase \
	data/tanks/siegetank2.bmp \
	data/tanks/siegetank.bmp \
	data/tanks/seasparrow.bmp \
	data/tanks/apache.ase \
	data/tanks/atst.bmp \
	data/tanks/railgun.ase \
	data/tanks/kenny2.txt \
	data/tanks/t55b.bmp \
	data/tanks/hawk.bmp \
	data/tanks/towedartillery.bmp \
	data/tanks/ram.bmp \
	data/tanks/patriot.ase \
	data/tanks/m7priest.ase \
	data/tanks/hothgun2.bmp \
	data/tanks/bradley.ase \
	data/tanks/t74.bmp \
	data/tanks/panzer3.ase \
	data/tanks/m1a1.bmp \
	data/tanks/m198.bmp \
	data/tanks/paladin.bmp \
	data/tanks/bm13.bmp \
	data/tanks/sa6.bmp \
	data/tanks/bradleyb.bmp \
	data/tanks/ram.ase \
	data/tanks/howitzer.bmp \
	data/tanks/m1a1.ase
scorcheddatatankszsu57dir = ${datadir}/data/tanks/zsu57
scorcheddatatankszsu57_DATA = data/tanks/zsu57/zsu57.bmp \
	data/tanks/zsu57/zsu57.txt \
	data/tanks/zsu57/black.bmp
scorcheddatatanksCannonTowerdir = ${datadir}/data/tanks/CannonTower
scorcheddatatanksCannonTower_DATA = 
scorcheddatatankssa6dir = ${datadir}/data/tanks/sa6
scorcheddatatankssa6_DATA = data/tanks/sa6/guncover.bmp \
	data/tanks/sa6/chrome.bmp \
	data/tanks/sa6/white.bmp \
	data/tanks/sa6/zsu23.bmp \
	data/tanks/sa6/guncoveralpha.bmp \
	data/tanks/sa6/sa6.txt \
	data/tanks/sa6/black.bmp
scorcheddatatanksturret2dir = ${datadir}/data/tanks/turret2
scorcheddatatanksturret2_DATA = data/tanks/turret2/chrome.bmp \
	data/tanks/turret2/missileturret.bmp \
	data/tanks/turret2/turret2.txt
scorcheddatatanksm48dir = ${datadir}/data/tanks/m48
scorcheddatatanksm48_DATA = data/tanks/m48/tread.bmp \
	data/tanks/m48/chrome.bmp \
	data/tanks/m48/white.bmp \
	data/tanks/m48/m48.txt \
	data/tanks/m48/camo.bmp
scorcheddatatankshelderdir = ${datadir}/data/tanks/helder
scorcheddatatankshelder_DATA = data/tanks/helder/helder.txt \
	data/tanks/helder/redspace.bmp \
	data/tanks/helder/helder2.txt \
	data/tanks/helder/whitespace.bmp
scorcheddatatanksphotoncannondir = ${datadir}/data/tanks/photoncannon
scorcheddatatanksphotoncannon_DATA = data/tanks/photoncannon/basetexture.bmp \
	data/tanks/photoncannon/blue.bmp \
	data/tanks/photoncannon/yellow.bmp \
	data/tanks/photoncannon/photoncannon.txt \
	data/tanks/photoncannon/gradient.bmp
scorcheddatatanksbradley2dir = ${datadir}/data/tanks/bradley2
scorcheddatatanksbradley2_DATA = data/tanks/bradley2/bradley.bmp \
	data/tanks/bradley2/bradley2.txt
scorcheddatatanksbm13dir = ${datadir}/data/tanks/bm13
scorcheddatatanksbm13_DATA = data/tanks/bm13/dot.bmp \
	data/tanks/bm13/bigtire.bmp \
	data/tanks/bm13/white.bmp \
	data/tanks/bm13/cab.bmp \
	data/tanks/bm13/tan.bmp \
	data/tanks/bm13/bm13-2.txt
scorcheddatatankshawkdir = ${datadir}/data/tanks/hawk
scorcheddatatankshawk_DATA = data/tanks/hawk/bigtire.bmp \
	data/tanks/hawk/chrome.bmp \
	data/tanks/hawk/white.bmp \
	data/tanks/hawk/hawk.txt \
	data/tanks/hawk/tan.bmp
scorcheddatatanksCF104dir = ${datadir}/data/tanks/CF-104
scorcheddatatanksCF104_DATA = data/tanks/CF-104/cockpit.bmp \
	data/tanks/CF-104/red.bmp \
	data/tanks/CF-104/engine.bmp \
	data/tanks/CF-104/104.txt \
	data/tanks/CF-104/seams.bmp \
	data/tanks/CF-104/black.bmp
scorcheddatatanksmissileturretdir = ${datadir}/data/tanks/missileturret
scorcheddatatanksmissileturret_DATA = data/tanks/missileturret/red.bmp \
	data/tanks/missileturret/chrome.bmp \
	data/tanks/missileturret/side.bmp \
	data/tanks/missileturret/missileturret.txt \
	data/tanks/missileturret/white.bmp
scorcheddatatanksbattleshipdir = ${datadir}/data/tanks/battleship
scorcheddatatanksbattleship_DATA = data/tanks/battleship/battleship.txt \
	data/tanks/battleship/grey.bmp
scorcheddatatankscannontowerdir = ${datadir}/data/tanks/cannontower
scorcheddatatankscannontower_DATA = data/tanks/cannontower/side2.bmp \
	data/tanks/cannontower/top.bmp \
	data/tanks/cannontower/cannontower.txt \
	data/tanks/cannontower/side.bmp \
	data/tanks/cannontower/base.bmp \
	data/tanks/cannontower/gun.bmp
scorcheddatatanksgorilladir = ${datadir}/data/tanks/gorilla
scorcheddatatanksgorilla_DATA = data/tanks/gorilla/gorilla.txt \
	data/tanks/gorilla/gorilla.bmp \
	data/tanks/gorilla/gun.bmp
scorcheddatatanksm1a1dir = ${datadir}/data/tanks/m1a1
scorcheddatatanksm1a1_DATA = data/tanks/m1a1/tread.bmp \
	data/tanks/m1a1/m1a1.txt \
	data/tanks/m1a1/camo.bmp \
	data/tanks/m1a1/black.bmp
scorcheddatatankstheldir = ${datadir}/data/tanks/thel
scorcheddatatanksthel_DATA = data/tanks/thel/chrome.bmp \
	data/tanks/thel/thel.txt \
	data/tanks/thel/kaki.bmp \
	data/tanks/thel/green.bmp \
	data/tanks/thel/black.bmp
scorcheddatatankszsu23dir = ${datadir}/data/tanks/zsu23
scorcheddatatankszsu23_DATA = data/tanks/zsu23/white.bmp \
	data/tanks/zsu23/zsu23.bmp \
	data/tanks/zsu23/zsu23.txt \
	data/tanks/zsu23/black.bmp
scorcheddatatankslav25dir = ${datadir}/data/tanks/lav-25
scorcheddatatankslav25_DATA = data/tanks/lav-25/bigtire.bmp \
	data/tanks/lav-25/lav-25.txt \
	data/tanks/lav-25/camo.bmp
scorcheddatatankstowedartillery2dir = ${datadir}/data/tanks/towedartillery2
scorcheddatatankstowedartillery2_DATA = data/tanks/towedartillery2/bigtire.bmp \
	data/tanks/towedartillery2/chrome.bmp \
	data/tanks/towedartillery2/towedartillery2.txt \
	data/tanks/towedartillery2/tan.bmp
scorcheddatatanksmlrsdir = ${datadir}/data/tanks/mlrs
scorcheddatatanksmlrs_DATA = data/tanks/mlrs/mlrs.txt \
	data/tanks/mlrs/tread.bmp \
	data/tanks/mlrs/chrome.bmp \
	data/tanks/mlrs/camo.bmp
scorcheddatatanksdeathdir = ${datadir}/data/tanks/death
scorcheddatatanksdeath_DATA = data/tanks/death/death.txt \
	data/tanks/death/chrome.bmp \
	data/tanks/death/white.bmp \
	data/tanks/death/tan.bmp \
	data/tanks/death/black.bmp
scorcheddatatankspatriotdir = ${datadir}/data/tanks/patriot
scorcheddatatankspatriot_DATA = data/tanks/patriot/bigtire.bmp \
	data/tanks/patriot/chrome.bmp \
	data/tanks/patriot/patriot.txt \
	data/tanks/patriot/kaki.bmp \
	data/tanks/patriot/camo.bmp
scorcheddatatankstuxdir = ${datadir}/data/tanks/tux
scorcheddatatankstux_DATA = data/tanks/tux/yellow.bmp \
	data/tanks/tux/white.bmp \
	data/tanks/tux/tux.txt \
	data/tanks/tux/grey.bmp \
	data/tanks/tux/black.bmp
scorcheddatatanksguntowerdir = ${datadir}/data/tanks/guntower
scorcheddatatanksguntower_DATA = data/tanks/guntower/guntower.bmp \
	data/tanks/guntower/guntower2.bmp \
	data/tanks/guntower/guntower.txt
scorcheddatatankst90dir = ${datadir}/data/tanks/t90
scorcheddatatankst90_DATA = data/tanks/t90/t90.txt \
	data/tanks/t90/t90.bmp \
	data/tanks/t90/black.bmp
scorcheddatatalkdir = ${datadir}/data/talk
scorcheddatatalk_DATA = data/talk/talk2.txt \
	data/talk/talk1.txt
scorcheddatatalkpolishdir = ${datadir}/data/talk/polish
scorcheddatatalkpolish_DATA = data/talk/polish/talk2.txt \
	data/talk/polish/talk1.txt
scorcheddatatalkgermandir = ${datadir}/data/talk/german
scorcheddatatalkgerman_DATA = data/talk/german/talk2.txt \
	data/talk/german/talk1.txt
scorcheddatawavdir = ${datadir}/data/wav
scorcheddatawav_DATA = 
scorcheddatawavshootdir = ${datadir}/data/wav/shoot
scorcheddatawavshoot_DATA = data/wav/shoot/large.wav \
	data/wav/shoot/flare.wav \
	data/wav/shoot/xlarge.wav \
	data/wav/shoot/medium.wav \
	data/wav/shoot/small.wav \
	data/wav/shoot/tracer.wav \
	data/wav/shoot/launch.wav \
	data/wav/shoot/laser.wav
scorcheddatawavmovementdir = ${datadir}/data/wav/movement
scorcheddatawavmovement_DATA = data/wav/movement/turn.wav \
	data/wav/movement/movement.wav \
	data/wav/movement/elevate.wav
scorcheddatawavmiscdir = ${datadir}/data/wav/misc
scorcheddatawavmisc_DATA = data/wav/misc/laserdeath.wav \
	data/wav/misc/play.wav \
	data/wav/misc/para.wav \
	data/wav/misc/camera.wav \
	data/wav/misc/splash.wav \
	data/wav/misc/text.wav
scorcheddatawavexplosionsdir = ${datadir}/data/wav/explosions
scorcheddatawavexplosions_DATA = data/wav/explosions/large.wav \
	data/wav/explosions/xlarge.wav \
	data/wav/explosions/crunch.wav \
	data/wav/explosions/medium.wav \
	data/wav/explosions/napalm.wav \
	data/wav/explosions/small.wav \
	data/wav/explosions/gloop.wav \
	data/wav/explosions/tank.wav
scorcheddatawavshielddir = ${datadir}/data/wav/shield
scorcheddatawavshield_DATA = data/wav/shield/hit.wav \
	data/wav/shield/activateforce.wav \
	data/wav/shield/hit2.wav \
	data/wav/shield/activate.wav
scorcheddatawavbatterydir = ${datadir}/data/wav/battery
scorcheddatawavbattery_DATA = data/wav/battery/battery.wav
