SUBDIRS = src

docdir = @docdir@

scorcheddocumentationdir = ${docdir}/documentation
scorcheddocumentation_DATA = documentation/README-apoc.txt \
	documentation/README-EXPAT.txt \
	documentation/README-ODE.txt \
	documentation/README-SDL.txt \
	documentation/README-SDLMIXER.txt \
	documentation/README-SDLNET.txt \
	documentation/README-wxwindows.txt \
	documentation/README-zlib.txt
scorcheddocumentationhtmldir = ${docdir}/documentation/html
scorcheddocumentationhtml_DATA = documentation/html/accessories.html \
	documentation/html/aiming.html \
	documentation/html/camera.html \
	documentation/html/dummies.html \
	documentation/html/index.html \
	documentation/html/keys.html \
	documentation/html/modelling.html \
	documentation/html/online.html \
	documentation/html/options.html \
	documentation/html/players.html \
	documentation/html/ports.html \
	documentation/html/quickstart.html \
	documentation/html/screen.html \
	documentation/html/serverfiles.html
scorcheddocumentationhtmlbuttonsdir = ${docdir}/documentation/html/buttons
scorcheddocumentationhtmlbuttons_DATA = documentation/html/buttons/donate.gif \
	documentation/html/buttons/dummies.gif \
	documentation/html/buttons/scorchedlarge2.gif
scorcheddocumentationhtmlnumbersdir = ${docdir}/documentation/html/numbers
scorcheddocumentationhtmlnumbers_DATA = documentation/html/numbers/number-1.gif \
	documentation/html/numbers/number-2.gif \
	documentation/html/numbers/number-3.gif \
	documentation/html/numbers/number-4.gif \
	documentation/html/numbers/number-5.gif \
	documentation/html/numbers/number-6.gif \
	documentation/html/numbers/number-7.gif \
	documentation/html/numbers/number-8.gif \
	documentation/html/numbers/number-9.gif
scorcheddocumentationhtmlscreenshotsdir = ${docdir}/documentation/html/screenshots
scorcheddocumentationhtmlscreenshots_DATA = documentation/html/screenshots/3ds.gif \
	documentation/html/screenshots/aiming.gif \
	documentation/html/screenshots/indicators.gif \
	documentation/html/screenshots/milkshape1.gif \
	documentation/html/screenshots/milkshape2.gif \
	documentation/html/screenshots/online1.gif \
	documentation/html/screenshots/online2.gif \
	documentation/html/screenshots/plan.gif \
	documentation/html/screenshots/player.gif \
	documentation/html/screenshots/quickstart1.gif \
	documentation/html/screenshots/quickstart2.gif \
	documentation/html/screenshots/quickstart3.gif \
	documentation/html/screenshots/quickstart4.gif \
	documentation/html/screenshots/quickstart5.gif \
	documentation/html/screenshots/quickstart6.gif \
	documentation/html/screenshots/quickstart7.gif \
	documentation/html/screenshots/scorched37-3-small.gif \
	documentation/html/screenshots/scorched37-4-small.gif \
	documentation/html/screenshots/server1.gif \
	documentation/html/screenshots/server2.gif \
	documentation/html/screenshots/tooltip1.gif \
	documentation/html/screenshots/weapon.gif \
	documentation/html/screenshots/wind.gif
scorcheddatadir = ${datadir}/data
scorcheddata_DATA = data/accessories.xml \
	data/ainames.txt \
	data/autoexec.xml \
	data/keys.xml \
	data/landscapes.xml \
	data/modinfo.xml \
	data/mysql.xml \
	data/pgprunetables.sql \
	data/pgsql.xml \
	data/pgstatstables.sql \
	data/playernames.txt \
	data/prunetables.sql \
	data/random.no \
	data/safedisplay.xml \
	data/server.xml \
	data/singlecustom.xml \
	data/singleeasy.xml \
	data/singlehard.xml \
	data/singlenormal.xml \
	data/singletarget.xml \
	data/ssdisplay.xml \
	data/ssgame.xml \
	data/statstables.sql \
	data/tankais.xml \
	data/tanks.xml \
	data/tanktypes.xml \
	data/textureset.xml \
	data/tips.txt \
	data/windows.xml
scorcheddataaccessoriesdir = ${datadir}/data/accessories
scorcheddataaccessories_DATA = data/accessories/clusterbomb.ase \
	data/accessories/clusterbomb2.ase \
	data/accessories/default.ase \
	data/accessories/default.bmp \
	data/accessories/flare.txt \
	data/accessories/magma.bmp \
	data/accessories/roller.ase \
	data/accessories/Thumbs.db \
	data/accessories/white.bmp
scorcheddataaccessoriesbananadir = ${datadir}/data/accessories/banana
scorcheddataaccessoriesbanana_DATA = data/accessories/banana/banana.txt \
	data/accessories/banana/bantex.bmp
scorcheddataaccessoriesbarragedir = ${datadir}/data/accessories/barrage
scorcheddataaccessoriesbarrage_DATA = data/accessories/barrage/barrage.txt \
	data/accessories/barrage/gradient.bmp \
	data/accessories/barrage/white.bmp \
	data/accessories/barrage/yellow.bmp
scorcheddataaccessoriesbeer_bottledir = ${datadir}/data/accessories/beer_bottle
scorcheddataaccessoriesbeer_bottle_DATA = data/accessories/beer_bottle/bottle.bmp \
	data/accessories/beer_bottle/bottle.txt
scorcheddataaccessoriesbombdir = ${datadir}/data/accessories/bomb
scorcheddataaccessoriesbomb_DATA = data/accessories/bomb/black.bmp \
	data/accessories/bomb/bomb.txt \
	data/accessories/bomb/white.bmp
scorcheddataaccessoriesbombletdir = ${datadir}/data/accessories/bomblet
scorcheddataaccessoriesbomblet_DATA = data/accessories/bomblet/bomblet.txt \
	data/accessories/bomblet/yellow.bmp
scorcheddataaccessoriesbouncingbettydir = ${datadir}/data/accessories/bouncingbetty
scorcheddataaccessoriesbouncingbetty_DATA = data/accessories/bouncingbetty/black.bmp \
	data/accessories/bouncingbetty/bouncingbetty.txt
scorcheddataaccessoriesdiggerdir = ${datadir}/data/accessories/digger
scorcheddataaccessoriesdigger_DATA = data/accessories/digger/black.bmp \
	data/accessories/digger/digger.txt \
	data/accessories/digger/swirl.bmp
scorcheddataaccessoriesdirtdir = ${datadir}/data/accessories/dirt
scorcheddataaccessoriesdirt_DATA = data/accessories/dirt/camo.bmp \
	data/accessories/dirt/dirt.txt
scorcheddataaccessoriesfatmandir = ${datadir}/data/accessories/fatman
scorcheddataaccessoriesfatman_DATA = data/accessories/fatman/black.bmp \
	data/accessories/fatman/fatman.txt
scorcheddataaccessorieshawkmissiledir = ${datadir}/data/accessories/hawkmissile
scorcheddataaccessorieshawkmissile_DATA = data/accessories/hawkmissile/gradient.bmp \
	data/accessories/hawkmissile/hawk.txt \
	data/accessories/hawkmissile/white.bmp \
	data/accessories/hawkmissile/yellow.bmp
scorcheddataaccessoriesherringdir = ${datadir}/data/accessories/herring
scorcheddataaccessoriesherring_DATA = data/accessories/herring/body.bmp \
	data/accessories/herring/eyes.bmp \
	data/accessories/herring/herring.txt
scorcheddataaccessoriesicbmdir = ${datadir}/data/accessories/icbm
scorcheddataaccessoriesicbm_DATA = data/accessories/icbm/black.bmp \
	data/accessories/icbm/gradient.bmp \
	data/accessories/icbm/icbm.txt \
	data/accessories/icbm/white.bmp \
	data/accessories/icbm/yellow.bmp
scorcheddataaccessorieslaserdir = ${datadir}/data/accessories/laser
scorcheddataaccessorieslaser_DATA = data/accessories/laser/about.txt \
	data/accessories/laser/alpha2.bmp \
	data/accessories/laser/blue128.bmp \
	data/accessories/laser/hlaser.txt \
	data/accessories/laser/laser.txt \
	data/accessories/laser/red128.bmp
scorcheddataaccessorieslittleboydir = ${datadir}/data/accessories/littleboy
scorcheddataaccessorieslittleboy_DATA = data/accessories/littleboy/black.bmp \
	data/accessories/littleboy/littleboy.txt
scorcheddataaccessoriesm48dir = ${datadir}/data/accessories/m48
scorcheddataaccessoriesm48_DATA = data/accessories/m48/gradient.bmp \
	data/accessories/m48/m48.txt \
	data/accessories/m48/white.bmp \
	data/accessories/m48/yellow.bmp
scorcheddataaccessoriesmirvwarheaddir = ${datadir}/data/accessories/mirvwarhead
scorcheddataaccessoriesmirvwarhead_DATA = data/accessories/mirvwarhead/black.bmp \
	data/accessories/mirvwarhead/mirvwarhead.txt
scorcheddataaccessoriesnapalmdir = ${datadir}/data/accessories/napalm
scorcheddataaccessoriesnapalm_DATA = data/accessories/napalm/body.bmp \
	data/accessories/napalm/napalm.txt
scorcheddataaccessoriespalmtreedir = ${datadir}/data/accessories/palmtree
scorcheddataaccessoriespalmtree_DATA = data/accessories/palmtree/black.bmp \
	data/accessories/palmtree/burntpalm.txt \
	data/accessories/palmtree/burntpalm2.txt \
	data/accessories/palmtree/green.bmp \
	data/accessories/palmtree/palm.txt \
	data/accessories/palmtree/palm2.txt \
	data/accessories/palmtree/tan.bmp
scorcheddataaccessoriespatriotdir = ${datadir}/data/accessories/patriot
scorcheddataaccessoriespatriot_DATA = data/accessories/patriot/gradient.bmp \
	data/accessories/patriot/patriot.txt \
	data/accessories/patriot/white.bmp \
	data/accessories/patriot/yellow.bmp
scorcheddataaccessoriesriotdir = ${datadir}/data/accessories/riot
scorcheddataaccessoriesriot_DATA = data/accessories/riot/base.bmp \
	data/accessories/riot/body.bmp \
	data/accessories/riot/riot.txt
scorcheddataaccessoriesrollerdir = ${datadir}/data/accessories/roller
scorcheddataaccessoriesroller_DATA = data/accessories/roller/metal.bmp \
	data/accessories/roller/roller.txt \
	data/accessories/roller/warning.bmp \
	data/accessories/roller/worn.bmp
scorcheddataaccessoriessa6dir = ${datadir}/data/accessories/sa6
scorcheddataaccessoriessa6_DATA = data/accessories/sa6/gradient.bmp \
	data/accessories/sa6/sa6.txt \
	data/accessories/sa6/white.bmp \
	data/accessories/sa6/yellow.bmp
scorcheddataaccessoriesshelldir = ${datadir}/data/accessories/shell
scorcheddataaccessoriesshell_DATA = data/accessories/shell/black.bmp \
	data/accessories/shell/shell.txt
scorcheddataaccessoriessmallpinedir = ${datadir}/data/accessories/smallpine
scorcheddataaccessoriessmallpine_DATA = data/accessories/smallpine/black.bmp \
	data/accessories/smallpine/burntsmallpine.txt \
	data/accessories/smallpine/green.bmp \
	data/accessories/smallpine/smallpine.txt \
	data/accessories/smallpine/smallpine2.txt \
	data/accessories/smallpine/smallpine3.txt \
	data/accessories/smallpine/tan.bmp \
	data/accessories/smallpine/wintergreen.bmp \
	data/accessories/smallpine/wintersmallpine.txt \
	data/accessories/smallpine/wintersmallpine2.txt \
	data/accessories/smallpine/wintersmallpine3.txt
scorcheddataaccessoriessonicringdir = ${datadir}/data/accessories/sonicring
scorcheddataaccessoriessonicring_DATA = data/accessories/sonicring/sonicring.bmp \
	data/accessories/sonicring/sonicring.txt
scorcheddataaccessoriesteleportdir = ${datadir}/data/accessories/teleport
scorcheddataaccessoriesteleport_DATA = data/accessories/teleport/base.bmp \
	data/accessories/teleport/detail.bmp \
	data/accessories/teleport/teleport.txt
scorcheddataaccessoriesv2missiledir = ${datadir}/data/accessories/v2missile
scorcheddataaccessoriesv2missile_DATA = data/accessories/v2missile/black.bmp \
	data/accessories/v2missile/checker.bmp \
	data/accessories/v2missile/gradient.bmp \
	data/accessories/v2missile/v2missile.txt \
	data/accessories/v2missile/yellow.bmp
scorcheddataavatarsdir = ${datadir}/data/avatars
scorcheddataavatars_DATA = data/avatars/agreement.txt \
	data/avatars/animal.gif \
	data/avatars/baby.gif \
	data/avatars/bavia.gif \
	data/avatars/computer.gif \
	data/avatars/daisy.gif \
	data/avatars/fish.gif \
	data/avatars/flower.gif \
	data/avatars/floyd.gif \
	data/avatars/heart.gif \
	data/avatars/lips.gif \
	data/avatars/mxpx.gif \
	data/avatars/pint.gif \
	data/avatars/player.gif \
	data/avatars/prot.gif \
	data/avatars/termin.gif \
	data/avatars/Thumbs.db \
	data/avatars/vader.gif \
	data/avatars/web.gif \
	data/avatars/yoda.gif
scorcheddatafontsdir = ${datadir}/data/fonts
scorcheddatafonts_DATA = data/fonts/test.ttf \
	data/fonts/testout.ttf \
	data/fonts/veramobd.ttf
scorcheddataglobalmodsdir = ${datadir}/data/globalmods
scorcheddataglobalmods_DATA = data/globalmods/globalmods.txt
scorcheddataglobalmodsapocdir = ${datadir}/data/globalmods/apoc
scorcheddataglobalmodsapoc_DATA = data/globalmods/apoc/authors.txt \
	data/globalmods/apoc/license.txt \
	data/globalmods/apoc/readme-nexus.txt \
	data/globalmods/apoc/readme.txt
scorcheddataglobalmodsapocdatadir = ${datadir}/data/globalmods/apoc/data
scorcheddataglobalmodsapocdata_DATA = data/globalmods/apoc/data/accessories.xml \
	data/globalmods/apoc/data/ainames.txt \
	data/globalmods/apoc/data/landscapes.xml \
	data/globalmods/apoc/data/modinfo.xml \
	data/globalmods/apoc/data/server.xml \
	data/globalmods/apoc/data/singleeasy.xml \
	data/globalmods/apoc/data/singlehard.xml \
	data/globalmods/apoc/data/singlenormal.xml \
	data/globalmods/apoc/data/singletarget.xml \
	data/globalmods/apoc/data/tankais.xml \
	data/globalmods/apoc/data/textureset.xml
scorcheddataglobalmodsapocdataaccessoriesdir = ${datadir}/data/globalmods/apoc/data/accessories
scorcheddataglobalmodsapocdataaccessories_DATA = data/globalmods/apoc/data/accessories/black.bmp \
	data/globalmods/apoc/data/accessories/green.bmp \
	data/globalmods/apoc/data/accessories/molten.bmp
scorcheddataglobalmodsapocdataaccessoriesbuildingsdir = ${datadir}/data/globalmods/apoc/data/accessories/buildings
scorcheddataglobalmodsapocdataaccessoriesbuildings_DATA = data/globalmods/apoc/data/accessories/buildings/bar1.txt \
	data/globalmods/apoc/data/accessories/buildings/builds1.bmp \
	data/globalmods/apoc/data/accessories/buildings/builds2.bmp \
	data/globalmods/apoc/data/accessories/buildings/builds3.bmp \
	data/globalmods/apoc/data/accessories/buildings/church1.txt \
	data/globalmods/apoc/data/accessories/buildings/church1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/factory1.txt \
	data/globalmods/apoc/data/accessories/buildings/factory1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/farm1.txt \
	data/globalmods/apoc/data/accessories/buildings/farm1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/fence1.bmp \
	data/globalmods/apoc/data/accessories/buildings/fence1trans.bmp \
	data/globalmods/apoc/data/accessories/buildings/gasstation1.txt \
	data/globalmods/apoc/data/accessories/buildings/gasstation1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/house1-2.txt \
	data/globalmods/apoc/data/accessories/buildings/house1-2burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/house1-3.txt \
	data/globalmods/apoc/data/accessories/buildings/house1-3burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/house1.txt \
	data/globalmods/apoc/data/accessories/buildings/house1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/logcabin1.txt \
	data/globalmods/apoc/data/accessories/buildings/logcabin1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/nuclearplant.txt \
	data/globalmods/apoc/data/accessories/buildings/office1.txt \
	data/globalmods/apoc/data/accessories/buildings/office1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/office2.txt \
	data/globalmods/apoc/data/accessories/buildings/office2burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/office3.txt \
	data/globalmods/apoc/data/accessories/buildings/skyscraper1.txt \
	data/globalmods/apoc/data/accessories/buildings/skyscraper1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/store1.txt \
	data/globalmods/apoc/data/accessories/buildings/store1burnt.txt \
	data/globalmods/apoc/data/accessories/buildings/trailorhouse1.txt \
	data/globalmods/apoc/data/accessories/buildings/trailorhouse1burnt.txt
scorcheddataglobalmodsapocdataaccessoriesobjectsdir = ${datadir}/data/globalmods/apoc/data/accessories/objects
scorcheddataglobalmodsapocdataaccessoriesobjects_DATA = data/globalmods/apoc/data/accessories/objects/brownrock1.txt \
	data/globalmods/apoc/data/accessories/objects/brownrock2.txt \
	data/globalmods/apoc/data/accessories/objects/brownrock3.txt \
	data/globalmods/apoc/data/accessories/objects/brownrock4.txt \
	data/globalmods/apoc/data/accessories/objects/cactus.txt \
	data/globalmods/apoc/data/accessories/objects/cactusburnt.txt \
	data/globalmods/apoc/data/accessories/objects/cactussmall.txt \
	data/globalmods/apoc/data/accessories/objects/cactussmallburnt.txt \
	data/globalmods/apoc/data/accessories/objects/deer1.txt \
	data/globalmods/apoc/data/accessories/objects/deer2.txt \
	data/globalmods/apoc/data/accessories/objects/deerburnt.txt \
	data/globalmods/apoc/data/accessories/objects/earth.bmp \
	data/globalmods/apoc/data/accessories/objects/earth.txt \
	data/globalmods/apoc/data/accessories/objects/earth_half.txt \
	data